--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie
     lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.
 
-    Contact
+    Contact Us
 
     yum@sweeteatsbakery.com
     202-555-0144
